Korrigere mangelende nn tekster

--- a/src/app/i18n/nn.json
+++ b/src/app/i18n/nn.json
@@ -175,7 +175,7 @@
     "step.periode.leggTilPeriodeMedFulltFravær": "Legg til ny periode med fullt fråvær",
     "step.periode.leggTilDagMedDelvisFravær": "Legg til ny dag med delvis fråvær.",
     "step.periode.spm.harDagerMedDelvisFravær": "Har du hatt dagar med delvis fråvær frå jobb?",
-    "step.periode.spm.hjemmePgaStengtBhgSkole": "Har du vært hjemme fra jobb fordi barnehagen eller skolen har vært lokalt stengt på grunn av koronaviruset?",
+    "step.periode.spm.hjemmePgaStengtBhgSkole": "Har du vore heime frå jobb fordi barnehagen eller skulen har vært lokalt stengt på grunn av koronaviruset?",
     "step.periode.harDagerMedDelvisFravær.addLabel": "Legg til ny dag med delvis fråvær",
     "step.periode.harDagerMedDelvisFravær.modalTitle": "Fråvær delar av dag",
     "step.periode.harDagerMedDelvisFravær.info.ikkeHelg.tittel": "Kvifor kan eg ikkje velje laurdag eller søndag?",
@@ -292,8 +292,8 @@
     "fieldvalidation.dato_utenfor_gyldig_tidsrom": "Datoen er utanfor gyldig tidsperiode",
     "fieldvalidation.tom_er_før_fom": "Til-dato kan ikkje vere før frå-dato",
     "fieldvalidation.ingen_dokumenter": "Ingen vedlegg er lastet opp",
-    "fieldvalidation.for_mange_dokumenter": "For mange dokumenter er lastet opp",
-    "fieldvalidation.samlet_storrelse_for_hoy": "Total samlet størrelse for dokumentene du har lastet opp overstiger grensen på 24Mb.",
+    "fieldvalidation.for_mange_dokumenter": "For mange dokument er lasta opp",
+    "fieldvalidation.samlet_storrelse_for_hoy": "Total samla størrelse for dokumenta du har lasta opp overstig grensa på 24Mb.",
 
     "avbrytSøknadDialog.avbrytSøknadLabel": "Ja, avbryt søknaden",
     "avbrytSøknadDialog.fortsettSøknadLabel": "Nei",
@@ -310,8 +310,8 @@
     "steg.footer.avbryt": "Avbryt og slett søknaden",
     "steg.footer.fortsettSenere": "Avslutt og fortset seinare",
 
-    "dokumenter.advarsel.totalstørrelse.1": "Du har totalt lastet opp mer enn grensen på 24 Mb. Det betyr at du må fjerne noe av det du har lastet opp. Hvis det betyr at du ikke får plass til alt du ønsker å sende nå, kan du ",
-    "dokumenter.advarsel.totalstørrelse.2": "ettersende flere dokumenter.",
+    "dokumenter.advarsel.totalstørrelse.1": "Du har totalt lasta opp meir enn grensa på 24 Mb. Det betyr at du må fjerne nokre av dei vedlegga du har lasta opp. Dersom det betyr at du ikkje får plass til alt du ønskjer å sende nå, kan du ",
+    "dokumenter.advarsel.totalstørrelse.2": "ettersende fleire dokumenter.",
 
     "steg.intro.info.1.html": "Denne søknaden bruker du når du er <strong>sjølvstendig næringsdrivande eller frilansar</strong> og skal søkje om utbetaling av omsorgspengar. Dersom du er tilsett i eige AS, blir du rekna som arbeidstakar, då skal du eller rekneskapsføraren din ",
     "steg.intro.info.2": "sende inntektsmelding til NAV",
@@ -335,26 +335,26 @@
     "steg.intro.kanIkkeBrukeSøknad.html": "Du kan <strong>berre</strong> bruke denne søknaden dersom du er heime frå jobb på grunn av éin av situasjonane det er gjort greie for over.",
     "steg.intro.smittevernInfo.1.html": "I søknaden må du laste opp ei stadfesting frå lege. Legen må stadfeste at barnet ikkje kan gå i barnehagen eller på skulen fordi det er <strong>særlege smittevernomsyn</strong> i samband med koronaviruset som det må takast hand om for anten barnet eller ein familiemedlem som barnet bur saman med. Legen skal ikkje gi opp diagnose eller kva familiemedlem det gjeld.",
     "steg.intro.smittevernInfo.2": "Dersom du ikkje har stadfestinga tilgjengeleg når du søkjer, kan du ettersende stadfestinga. Vi kan ikkje behandle søknaden før vi får stadfestinga.",
-    "steg.intro.stengtBhgSkole.1": "I søknaden må du laste opp en bekreftelse fra barnehagen eller skolen på at de har stengt.",
-    "steg.intro.stengtBhgSkole.2": "Hvis du ikke har bekreftelsen tilgjengelig når du søker, kan du ettersende den. Vi kan ikke behandle søknaden før vi mottar bekreftelsen.",
+    "steg.intro.stengtBhgSkole.1": "I søknaden må du laste opp ei stadfestinga frå barnehagen eller skolen på at dei har stengt.",
+    "steg.intro.stengtBhgSkole.2": "Dersom du ikkje har stadfestinga tilgjengeleg når du søkjer, kan du ettersende den. Vi kan ikkje behandle søknaden før vi mottar stadfestinga.",
 
     "steg.en.smittevern.sporsmal": "Har du vore heime med barn av særlege smittevernomsyn?",
     "steg.oppsummering.dokumenterSmittevern.header": "Stadfesting frå lege",
-    "steg.oppsummering.dokumenterStengtBhgSkole.header": "Bekreftelse fra barnehage eller skole",
+    "steg.oppsummering.dokumenterStengtBhgSkole.header": "Stadfesting frå barnehage eller skole",
 
-    "step.vedlegg_smittevernhensyn.stepTitle": "Last opp bekreftelse fra lege",
-    "step.vedlegg_smittevernhensyn.pageTitle": "Last opp dokumenter",
-    "step.vedlegg_smittevernhensyn.stepIndicatorLabel": "Last opp dokumenter",
-    "steg.vedlegg_smittevernhensyn.vedlegg": "Last opp bekreftelse fra lege",
-    "steg.vedlegg_smittevernhensyn.info.1": "Du må laste opp en bekreftelse fra lege om at det er særlige smittevernhensyn som gjør at barnet ikke kan gå i barnehage eller skole. Det gjør du enten ved å ta bilde av bekreftelsen, eller ved å scanne den.",
-    "steg.vedlegg_smittevernhensyn.info.2": "Hvis du ikke har bekreftelsen tilgjengelig nå, må du ettersende den til oss så snart du har den. Vi kan ikke behandle søknaden før vi har mottatt bekreftelsen.",
+    "step.vedlegg_smittevernhensyn.stepTitle": "Last opp stadfesting frå lege",
+    "step.vedlegg_smittevernhensyn.pageTitle": "Last opp dokument",
+    "step.vedlegg_smittevernhensyn.stepIndicatorLabel": "Last opp dokument",
+    "steg.vedlegg_smittevernhensyn.vedlegg": "Last opp stadfesting frå lege",
+    "steg.vedlegg_smittevernhensyn.info.1": "Du må laste opp ei stadfesting frå lege om at det er særlege smittevernhensyn som gjer at barnet ikkje kan gå i barnehage eller skule. Det gjer du enten ved å ta bilete av stadfestinga, eller ved å scanne den.",
+    "steg.vedlegg_smittevernhensyn.info.2": "Dersom du ikkje har stadfestinga tilgjengeleg nå, må du ettersende den til oss så snart du har den. Vi kan ikkje behandle søknaden før vi har mottatt stadfestinga.",
 
-    "step.vedlegg_stengtSkoleBhg.stepTitle": "Last opp bekreftelse fra barnehagen eller skolen",
-    "step.vedlegg_stengtSkoleBhg.pageTitle": "Last opp dokumenter",
-    "step.vedlegg_stengtSkoleBhg.stepIndicatorLabel": "Last opp dokumenter",
-    "steg.vedlegg_stengtSkoleBhg.vedlegg": "Last opp bekreftelse fra barnehagen eller skolen",
-    "steg.vedlegg_stengtSkoleBhg.info.1": "Du må laste opp en bekreftelse fra barnehagen eller skolen på at de har vært stengt på grunn av koronaviruset. Det gjør du enten ved å ta bilde av bekreftelsen, eller ved å scanne den.",
-    "steg.vedlegg_stengtSkoleBhg.info.2": "Hvis du ikke har bekreftelsen tilgjengelig nå, må du ettersende den til oss så snart du har den. Vi kan ikke behandle søknaden før vi har mottatt bekreftelsen.",
+    "step.vedlegg_stengtSkoleBhg.stepTitle": "Last opp stadfesting frå barnehagen eller skolen",
+    "step.vedlegg_stengtSkoleBhg.pageTitle": "Last opp dokument",
+    "step.vedlegg_stengtSkoleBhg.stepIndicatorLabel": "Last opp dokument",
+    "steg.vedlegg_stengtSkoleBhg.vedlegg": "Last opp stadfesting frå barnehagen eller skolen",
+    "steg.vedlegg_stengtSkoleBhg.info.1": "Du må laste opp ei stadfesting frå barnehagen eller skolen på at dei har vore stengt på grunn av koronaviruset. Det gjør du enten ved å ta bilete av stadfestinga, eller ved å scanne den.",
+    "steg.vedlegg_stengtSkoleBhg.info.2": "Dersom du ikkje har stadfestinga tilgjengeleg nå, må du ettersende den til oss så snart du har den. Vi kan ikkje behandle søknaden før vi har mottatt stadfestinga.",
 
     "steg.oppsummering.dokumenter.ikkelastetopp": "Ikkje lasta opp, må ettersendast",
 
@@ -388,7 +388,7 @@
 
     "summary.virksomhet.næringstype": "Næringstype",
     "summary.virksomhet.regnskapsfører": "Reknskapsførar er {navn}, telefon: {telefon}.",
-    "summary.virksomhet.ikkeRegnskapsfører": "Har ikke regnskapsfører.",
+    "summary.virksomhet.ikkeRegnskapsfører": "Har ikkje regnskapsførar.",
     "summary.virksomhet.tidsinfo.avsluttet": "Starta {fraOgMed}, avslutta {tilOgMed}.",
     "summary.virksomhet.tidsinfo.pågående": "Starta {fraOgMed} (er i gang).",
     "summary.virksomhet.fisker.påBladB": "Fiskar er på Blad B.",
