--- a/src/app/i18n/nn.json
+++ b/src/app/i18n/nn.json
@@ -335,7 +335,7 @@
     "steg.intro.kanIkkeBrukeSøknad.html": "Du kan <strong>berre</strong> bruke denne søknaden dersom du er heime frå jobb på grunn av éin av situasjonane det er gjort greie for over.",
     "steg.intro.smittevernInfo.1.html": "I søknaden må du laste opp ei stadfesting frå lege. Legen må stadfeste at barnet ikkje kan gå i barnehagen eller på skulen fordi det er <strong>særlege smittevernomsyn</strong> i samband med koronaviruset som det må takast hand om for anten barnet eller ein familiemedlem som barnet bur saman med. Legen skal ikkje gi opp diagnose eller kva familiemedlem det gjeld.",
     "steg.intro.smittevernInfo.2": "Dersom du ikkje har stadfestinga tilgjengeleg når du søkjer, kan du ettersende stadfestinga. Vi kan ikkje behandle søknaden før vi får stadfestinga.",
-    "steg.intro.stengtBhgSkole.1": "I søknaden må du laste opp ei stadfestinga frå barnehagen eller skolen på at dei har stengt.",
+    "steg.intro.stengtBhgSkole.1": "I søknaden må du laste opp ei stadfestinga frå barnehagen eller skulen på at dei har stengt.",
     "steg.intro.stengtBhgSkole.2": "Dersom du ikkje har stadfestinga tilgjengeleg når du søkjer, kan du ettersende den. Vi kan ikkje behandle søknaden før vi mottar stadfestinga.",
 
     "steg.en.smittevern.sporsmal": "Har du vore heime med barn av særlege smittevernomsyn?",
@@ -349,11 +349,11 @@
     "steg.vedlegg_smittevernhensyn.info.1": "Du må laste opp ei stadfesting frå lege om at det er særlege smittevernhensyn som gjer at barnet ikkje kan gå i barnehage eller skule. Det gjer du enten ved å ta bilete av stadfestinga, eller ved å scanne den.",
     "steg.vedlegg_smittevernhensyn.info.2": "Dersom du ikkje har stadfestinga tilgjengeleg nå, må du ettersende den til oss så snart du har den. Vi kan ikkje behandle søknaden før vi har mottatt stadfestinga.",
 
-    "step.vedlegg_stengtSkoleBhg.stepTitle": "Last opp stadfesting frå barnehagen eller skolen",
+    "step.vedlegg_stengtSkoleBhg.stepTitle": "Last opp stadfesting frå barnehagen eller skulen",
     "step.vedlegg_stengtSkoleBhg.pageTitle": "Last opp dokument",
     "step.vedlegg_stengtSkoleBhg.stepIndicatorLabel": "Last opp dokument",
-    "steg.vedlegg_stengtSkoleBhg.vedlegg": "Last opp stadfesting frå barnehagen eller skolen",
-    "steg.vedlegg_stengtSkoleBhg.info.1": "Du må laste opp ei stadfesting frå barnehagen eller skolen på at dei har vore stengt på grunn av koronaviruset. Det gjør du enten ved å ta bilete av stadfestinga, eller ved å scanne den.",
+    "steg.vedlegg_stengtSkoleBhg.vedlegg": "Last opp stadfesting frå barnehagen eller skulen",
+    "steg.vedlegg_stengtSkoleBhg.info.1": "Du må laste opp ei stadfesting frå barnehagen eller skulen på at dei har vore stengt på grunn av koronaviruset. Det gjør du enten ved å ta bilete av stadfestinga, eller ved å scanne den.",
     "steg.vedlegg_stengtSkoleBhg.info.2": "Dersom du ikkje har stadfestinga tilgjengeleg nå, må du ettersende den til oss så snart du har den. Vi kan ikkje behandle søknaden før vi har mottatt stadfestinga.",
 
     "steg.oppsummering.dokumenter.ikkelastetopp": "Ikkje lasta opp, må ettersendast",
