--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -204,9 +204,10 @@
     "steg.medlemsskap.utenlandsopphold.leggTilLabel": "Legg til nytt utenlandsopphold",
 
     "steg.oppsummering.info": "Les gjennom oppsummeringen før du sender inn søknaden. Hvis du vil gjøre endringer, kan du gå tilbake.",
-    "steg.oppsummering.søker.header": "Navn på søker",
+    "steg.oppsummering.søker.omDeg": "Om deg",
     "steg.oppsummering.søker.fnr": "Fødselsnummer: {fødselsnummer}",
 
+    "steg.oppsummering.barnet.omBarn": "Om barn",
     "steg.oppsummering.barnet.header": "Om barnet",
     "steg.oppsummering.barnet.navn": "Navn: {navn}",
     "steg.oppsummering.barnet.fødselsdato": "Fødselsdato: {dato}",
@@ -218,8 +219,11 @@
 
     "steg.oppsummering.arbeidssituasjon.header": "Din arbeidssituasjon",
     "steg.oppsummering.søkt_om_andre_utbetalinger": "Andre utbetalinger det er søkt om fra NAV",
+    "steg.oppsummering.utbetalinger.header": "Omsorgsdager du søker utbetaling for",
 
-    "steg.oppsummering.utlandetSiste12.header": "Bodd i utlandet siste 12 måneder",
+    "steg.oppsummering.medlemskap.header": "Medlemskap i folketrygden",
+
+    "steg.oppsummering.utlandetSiste12.header": "Har bodd i utlandet siste 12 måneder",
     "steg.oppsummering.utlandetNeste12.header": "Skal bo i utlandet neste 12 måneder",
     "steg.oppsummering.utlandetSiste12.liste.header": "Utenlandsopphold siste 12 måneder",
     "steg.oppsummering.utlandetNeste12.liste.header": "Utenlandsopphold neste 12 måneder",
@@ -229,8 +233,6 @@
     "steg.oppsummering.bekrefterOpplysninger.ikkeBekreftet": "Du må bekrefte opplysningene",
 
     "steg.oppsummering.utenlandsoppholdIPerioden.listetittel": "Utenlandsopphold i perioden",
-    "steg.oppsummering.bostederUtlandSiste12.listetittel": "Bosteder i utlandet siste 12 måneder",
-    "steg.oppsummering.bostederUtlandNeste12.listetittel": "Bosteder i utlandet neste 12 måneder",
 
     "steg.oppsummering.apiValideringFeil.tittel": "Noe av informasjonen mangler",
 
@@ -339,6 +341,9 @@
     "steg.intro.stengtBhgSkole.2": "Hvis du ikke har bekreftelsen tilgjengelig når du søker, kan du ettersende den. Vi kan ikke behandle søknaden før vi mottar bekreftelsen.",
 
     "steg.en.smittevern.sporsmal": "Har du vært hjemme med barn grunnet særlige smittevernhensyn?",
+
+    "steg.oppsummering.dokumenter.header": "Vedlegg",
+    "steg.oppsummering.dokumenter.ingenVedlegg": "Ingen vedlegg er lastet opp",
     "steg.oppsummering.dokumenterSmittevern.header": "Bekreftelse fra lege",
     "steg.oppsummering.dokumenterStengtBhgSkole.header": "Bekreftelse fra barnehage eller skole",
 
@@ -386,6 +391,7 @@
     "fiskerinfo.BLAD_A": "Blad A",
     "fiskerinfo.BLAD_B": "Blad B",
 
+    "summary.virksomhet.header": "Næringsinntekt",
     "summary.virksomhet.næringstype": "Næringstype",
     "summary.virksomhet.regnskapsfører": "Regnskapsfører er {navn}, telefon: {telefon}.",
     "summary.virksomhet.ikkeRegnskapsfører": "Har ikke regnskapsfører.",
@@ -408,7 +414,11 @@
     "frilanser.harDuHattInntekt.spm": "Har du jobbet og hatt inntekt som frilanser de siste 4 ukene?",
     "frilanser.nårStartet.spm": "Når startet du som frilanser?",
     "frilanser.jobberFortsatt.spm": "Jobber du fortsatt som frilanser?",
+
+    "frilanser.summary.header": "Frilansinntekt",
     "frilanser.summary.harDuHattInntekt.header": "Har du jobbet og hatt inntekt som frilanser de siste 4 ukene?",
     "frilanser.summary.nårStartet.header": "Når startet du som frilanser?",
-    "frilanser.summary.jobberFortsatt.header": "Jobber du fortsatt som frilanser?"
+    "frilanser.summary.jobberFortsatt.header": "Jobber du fortsatt som frilanser?",
+
+    "summary.andreIntekter.header": "Eventuelle andre inntekter"
 }
