--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -177,6 +177,7 @@
     "step.periode.leggTilDagMedDelvisFravær": "Legg til ny dag med delvis fravær",
     "step.periode.spm.harDagerMedDelvisFravær": "Har du hatt dager med delvis fravær fra jobb?",
     "step.periode.spm.hjemmePgaStengtBhgSkole": "Har du vært hjemme fra jobb fordi barnehagen eller skolen har vært lokalt stengt på grunn av koronaviruset?",
+    "step.periode.spm.hjemmePgaStengtBhgSkole.2021": "Har du vært hjemme fra jobb fordi barnehage/skole/SFO har vært stengt på grunn av koronaviruset?",
     "step.periode.harDagerMedDelvisFravær.addLabel": "Legg til ny dag med delvis fravær",
     "step.periode.harDagerMedDelvisFravær.modalTitle": "Fravær deler av dag",
     "step.periode.harDagerMedDelvisFravær.info.ikkeHelg.tittel": "Hvorfor kan jeg ikke velge lørdag eller søndag?",
@@ -332,6 +333,8 @@
     "steg.intro.form.spm.erSelvstendigEllerFrilanser": "Er du selvstendig næringsdrivende eller frilanser?",
     "steg.intro.form.spm.smittevernhensyn": "Har du vært hjemme med barn grunnet særlige smittevernhensyn?",
     "steg.intro.form.spm.hjemmePgaStengt": "Har du vært hjemme fra jobb fordi barnehagen eller skolen har vært lokalt stengt på grunn av koronaviruset?",
+    "steg.intro.form.spm.hjemmePgaStengt.2021": "Har du vært hjemme fra jobb fordi barnehage/skole/SFO har vært stengt på grunn av koronaviruset?",
+
     "steg.intro.form.spm.hjemmePgaSykdom": "Har du vært hjemme fra jobb fordi barnet eller barnepasser er blitt syk?",
     "steg.intro.søknadGjelderKunFor.1.html": "Denne søknaden gjelder <strong>kun for selvstendig næringsdrivende og frilansere</strong> som skal søke om utbetaling av omsorgspenger.",
     "steg.intro.søknadGjelderKunFor.2.html": "Hvis du er <strong>arbeidstaker</strong>, skal du ikke søke om utbetaling av omsorgspenger. Arbeidsgiveren din skal utbetale deg lønn som vanlig de dagene du tar ut omsorgsdager.",
