--- a/src/app/i18n/nn.json
+++ b/src/app/i18n/nn.json
@@ -177,6 +177,7 @@
     "step.periode.leggTilDagMedDelvisFravær": "Legg til ny dag med delvis fråvær.",
     "step.periode.spm.harDagerMedDelvisFravær": "Har du hatt dagar med delvis fråvær frå jobb?",
     "step.periode.spm.hjemmePgaStengtBhgSkole": "Har du vore heime frå jobb fordi barnehagen eller skulen har vært lokalt stengt på grunn av koronaviruset?",
+    "step.periode.spm.hjemmePgaStengtBhgSkole.2021": "Har du vore heime frå jobb fordi barnehagen/skulen/SFO har vært stengt på grunn av koronaviruset?",
     "step.periode.harDagerMedDelvisFravær.addLabel": "Legg til ny dag med delvis fråvær",
     "step.periode.harDagerMedDelvisFravær.modalTitle": "Fråvær delar av dag",
     "step.periode.harDagerMedDelvisFravær.info.ikkeHelg.tittel": "Kvifor kan eg ikkje velje laurdag eller søndag?",
@@ -332,6 +333,7 @@
     "steg.intro.form.spm.erSelvstendigEllerFrilanser": "Er du sjølvstendig næringsdrivande eller frilansar?",
     "steg.intro.form.spm.smittevernhensyn": "Har du vore heime med barn av særlege smittevernomsyn?",
     "steg.intro.form.spm.hjemmePgaStengt": "Har du vore heime frå jobb fordi skulen/barnehagen er stengd på grunn av koronaviruset?",
+    "steg.intro.form.spm.hjemmePgaStengt.2021": "Har du vore heime frå jobb fordi skulen/barnehagen/SFO er stengd på grunn av koronaviruset?",
     "steg.intro.form.spm.hjemmePgaSykdom": "Har du vore heime frå jobb fordi barnet er blitt sjukt eller barnepassaren er blitt sjuk?",
     "steg.intro.søknadGjelderKunFor.1.html": "Denne søknaden gjeld <strong>berre for sjølvstendig næringsdrivande og frilansarar</strong> som skal søkje om utbetaling av omsorgspengar.",
     "steg.intro.søknadGjelderKunFor.2.html": "Dersom du er <strong>arbeidstakar</strong>, skal du ikkje søkje om utbetaling av omsorgspengar. Arbeidsgivaren din skal betale ut lønn til deg som vanleg dei dagane du tek ut omsorgsdagar.",
