Tekstendring introside (dager)

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -164,7 +164,7 @@
 
     "step.periode.info2021.1": "Nå skal du legge inn dagene du har hatt fravær fra jobb fordi du har vært hjemme med omsorgsdager. Du kan få utbetalt omsorgspenger i opptil tre måneder tilbake i tid, regnet fra måneden før NAV mottok søknad fra deg.",
     "step.periode.info2021.2": "For omsorgsdager du bruker i 2021 må du selv dekke de 10 første dagene.",
-    "step.periode.info2021.3": "I søknaden legger du inn alle dagene du har vært hjemme med omsorgsdager i den perioden du søker for, inkludert dagene du dekker selv.",
+    "step.periode.info2021.3": "I søknaden legger du kun inn dagene du søker utbetaling for. Du skal altså ikke legge inn dagene du dekker selv.",
     "step.periode.info2021.nedtrekk.tittle": "Informasjon til deg som søker utbetaling for 2020",
     "step.periode.info2021.nedtrekk.1": "Reglene for hvor mange dager du selv må dekke har endret seg flere ganger på grunn av koronasituasjonen. Her er en oversikt over hvor mange omsorgsdager du selv må dekke i 2020:",
     "step.periode.info2021.nedtrekk.list.1": "1. januar 2020 – 12. mars 2020 må du dekke de 10 første omsorgsdagene selv.",
