--- a/src/app/i18n/nn.json
+++ b/src/app/i18n/nn.json
@@ -164,7 +164,7 @@
 
     "step.periode.info2021.1": "No skal du legga inn dagane du har hatt fråvær frå jobb fordi du har vore heime med omsorgsdagar. Du kan få utbetalt omsorgspengar i opptil tre månader tilbake i tid, rekna frå månaden før NAV fekk søknad frå deg.",
     "step.periode.info2021.2": "For omsorgsdagar du bruker i 2021 må du sjølv dekka dei 10 første dagane.",
-    "step.periode.info2021.3": "I søknaden legg du inn alle dagane du har vore heime med omsorgsdagar i den perioden du søkar for, inkludert dagane du dekker sjølv.",
+    "step.periode.info2021.3": "I søknaden legg du kun inn dagane du søkjer utbetaling for. Du skal altså ikkje leggje inn dagane du dekkjer sjølv.",
     "step.periode.info2021.nedtrekk.tittle": "Informasjon til deg som søkar utbetaling for 2020",
     "step.periode.info2021.nedtrekk.1": "Reglane for kor mange dagar du sjølv må dekkje har endra seg fleire gonger på grunn av koronasituasjonen. Her er ei oversikt over kor mange omsorgsdagar du sjølv må dekkje i 2020:",
     "step.periode.info2021.nedtrekk.list.1": "1. januar 2020 – 12. mars 2020 må du dekkje dei 10 første omsorgsdagane sjølv",
