--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -193,6 +193,8 @@
 
     "step.inntekt.er_arbeidstaker": "Er du arbeidstaker i tillegg til at du er selvstendig næringsdrivende og/eller frilanser?",
 
+    "fosterbarn.legend": "Vi henter vanligvis informasjon om barn fra folkeregisteret, men vi har ikke tilgang til informasjon om fosterbarn der. Derfor må du selv legge inn opplysninger om eventuelle fosterbarn.",
+    
     "steg.barn.fosterbarn.spm": "Har du fosterbarn?",
 
     "steg.medlemsskap.annetLandSiste12.spm": "Har du bodd i utlandet i hele eller deler av de siste 12 månedene?",
