--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -79,9 +79,9 @@
     "step.sendButtonLabel": "Send inn søknaden",
     "step.sendButtonAriaLabel": "Send inn søknaden",
 
-    "step.periode.pageTitle": "Perioder - Søknad om utbetaling av omsorgspenger",
-    "step.periode.stepTitle": "Hvilke dager har du vært hjemme med barn?",
-    "step.periode.stepIndicatorLabel": "Hvilke dager har du vært hjemme med barn?",
+    "step.fravaer.pageTitle": "Perioder - Søknad om utbetaling av omsorgspenger",
+    "step.fravaer.stepTitle": "Hvilke dager har du vært hjemme med barn?",
+    "step.fravaer.stepIndicatorLabel": "Hvilke dager har du vært hjemme med barn?",
 
     "step.arbeidssituasjon.pageTitle": "Arbeidssituasjon - Søknad om utbetaling av omsorgspenger",
     "step.arbeidssituasjon.stepTitle": "Arbeidssituasjon",
@@ -151,41 +151,41 @@
     "modal.minePlikter.part2a": "Jeg har lest og forstått det som står på",
     "modal.minePlikter.part2b": "nav.no/rettogplikt",
 
-    "step.periode.counsellorpanel.content": "I de fleste tilfeller må man som selvstendig næringsdrivende og frilanser betale de 10 første dager med omsorgspenger i året selv.",
-    "step.periode.dager_med_fullt_fravært.label": "Dager med fullt fravær",
-    "step.periode.dager_med_fullt_fravært.info": "TODO",
-    "step.periode.dager_med_delvis_fravært.label": "Dager med delvis fravær",
-    "step.periode.dager_med_delvis_fravært.info": "TODO",
-    "step.periode.har_du_oppholdt_deg_i_utlandet_for_dager_du_soker_ok.spm": "Har du vært i utlandet noen av dagene du søker omsorgspenger for?",
-    "step.periode.har_søkt_andre_utbetalinger.spm": "Har du søkt om andre utbetalinger fra NAV i forbindelse med koronasituasjonen?",
-    "step.periode.hvilke_utbetalinger.spm": "Hvilke andre utbetalinger fra NAV har du søkt om?",
+    "step.fravaer.counsellorpanel.content": "I de fleste tilfeller må man som selvstendig næringsdrivende og frilanser betale de 10 første dager med omsorgspenger i året selv.",
+    "step.fravaer.dager_med_fullt_fravært.label": "Dager med fullt fravær",
+    "step.fravaer.dager_med_fullt_fravært.info": "TODO",
+    "step.fravaer.dager_med_delvis_fravært.label": "Dager med delvis fravær",
+    "step.fravaer.dager_med_delvis_fravært.info": "TODO",
+    "step.fravaer.har_du_oppholdt_deg_i_utlandet_for_dager_du_soker_ok.spm": "Har du vært i utlandet noen av dagene du søker omsorgspenger for?",
+    "step.fravaer.har_søkt_andre_utbetalinger.spm": "Har du søkt om andre utbetalinger fra NAV i forbindelse med koronasituasjonen?",
+    "step.fravaer.hvilke_utbetalinger.spm": "Hvilke andre utbetalinger fra NAV har du søkt om?",
 
-    "step.periode.info2021.1": "Nå skal du legge inn dagene du har hatt fravær fra jobb fordi du har vært hjemme med omsorgsdager. Du kan få utbetalt omsorgspenger i opptil tre måneder tilbake i tid, regnet fra måneden før NAV mottok søknad fra deg.",
-    "step.periode.info2021.2": "For omsorgsdager du bruker i 2021 må du selv dekke de 10 første dagene.",
-    "step.periode.info2021.3": "I søknaden legger du kun inn dagene du søker utbetaling for. Du skal altså ikke legge inn dagene du dekker selv.",
-    "step.periode.info2021.nedtrekk.tittle": "Informasjon til deg som søker utbetaling for 2020",
-    "step.periode.info2021.nedtrekk.1": "Reglene for hvor mange dager du selv må dekke har endret seg flere ganger på grunn av koronasituasjonen. Her er en oversikt over hvor mange omsorgsdager du selv må dekke i 2020:",
-    "step.periode.info2021.nedtrekk.list.1": "1. januar 2020 – 12. mars 2020 må du dekke de 10 første omsorgsdagene selv.",
-    "step.periode.info2021.nedtrekk.list.2": "13. mars 2020 – 30. juni 2020 må du dekke de 3 første omsorgsdagene selv.",
-    "step.periode.info2021.nedtrekk.list.3": "1. juli 2020 – 31. desember 2020 må du dekke de 10 første omsorgsdagene selv.",
-    "step.periode.info2021.nedtrekk.2": "Dagene du selv skal dekke gjelder totalt for 2020. Det betyr at hvis du i 2020 allerede har dekket for eksempel 7 dager, gjenstår det 3 dager for deg å dekke i 2020.",
+    "step.fravaer.info2021.1": "Nå skal du legge inn dagene du har hatt fravær fra jobb fordi du har vært hjemme med omsorgsdager. Du kan få utbetalt omsorgspenger i opptil tre måneder tilbake i tid, regnet fra måneden før NAV mottok søknad fra deg.",
+    "step.fravaer.info2021.2": "For omsorgsdager du bruker i 2021 må du selv dekke de 10 første dagene.",
+    "step.fravaer.info2021.3": "I søknaden legger du kun inn dagene du søker utbetaling for. Du skal altså ikke legge inn dagene du dekker selv.",
+    "step.fravaer.info2021.nedtrekk.tittle": "Informasjon til deg som søker utbetaling for 2020",
+    "step.fravaer.info2021.nedtrekk.1": "Reglene for hvor mange dager du selv må dekke har endret seg flere ganger på grunn av koronasituasjonen. Her er en oversikt over hvor mange omsorgsdager du selv må dekke i 2020:",
+    "step.fravaer.info2021.nedtrekk.list.1": "1. januar 2020 – 12. mars 2020 må du dekke de 10 første omsorgsdagene selv.",
+    "step.fravaer.info2021.nedtrekk.list.2": "13. mars 2020 – 30. juni 2020 må du dekke de 3 første omsorgsdagene selv.",
+    "step.fravaer.info2021.nedtrekk.list.3": "1. juli 2020 – 31. desember 2020 må du dekke de 10 første omsorgsdagene selv.",
+    "step.fravaer.info2021.nedtrekk.2": "Dagene du selv skal dekke gjelder totalt for 2020. Det betyr at hvis du i 2020 allerede har dekket for eksempel 7 dager, gjenstår det 3 dager for deg å dekke i 2020.",
 
-    "step.periode.spm.harPerioderMedFravær": "Har du hatt hele dager med fravær fra jobb?",
-    "step.periode.harPerioderMedFravær.addLabel": "Legg til ny periode med fullt fravær",
-    "step.periode.harPerioderMedFravær.modalTitle": "Fravær hele dager",
-    "step.periode.harPerioderMedFravær.info.ikkeHelg.tittel": "Hvorfor kan jeg ikke velge lørdag eller søndag?",
-    "step.periode.harPerioderMedFravær.info.ikkeHelg.tekst": "Du kan kun få utbetalt omsorgspenger for hverdager, selv om du jobber lørdag eller søndag. Derfor kan du ikke velge lørdag eller søndag som start- eller sluttdato i perioden du legger inn.",
-    "step.periode.leggTilPeriodeMedFulltFravær": "Legg til ny periode med fullt fravær",
-    "step.periode.leggTilDagMedDelvisFravær": "Legg til ny dag med delvis fravær",
-    "step.periode.spm.harDagerMedDelvisFravær": "Har du hatt dager med delvis fravær fra jobb?",
-    "step.periode.spm.hjemmePgaStengtBhgSkole.2021": "Har du vært hjemme fra jobb fordi barnehage/skole/SFO har vært stengt på grunn av koronaviruset?",
-    "step.periode.harDagerMedDelvisFravær.addLabel": "Legg til ny dag med delvis fravær",
-    "step.periode.harDagerMedDelvisFravær.modalTitle": "Fravær deler av dag",
-    "step.periode.harDagerMedDelvisFravær.info.ikkeHelg.tittel": "Hvorfor kan jeg ikke velge lørdag eller søndag?",
-    "step.periode.harDagerMedDelvisFravær.info.ikkeHelg.tekst": "Du kan kun få utbetalt omsorgspenger for hverdager, selv om du jobber lørdag eller søndag. Derfor kan du ikke legge inn delvis fravær på lørdager eller søndager.",
-    "step.periode.måVelgeSituasjon": "Du må velge én av situasjonene over.",
-    "step.periode.utenlandsopphold.addLabel": "Legg til nytt utenlandsopphold",
-    "step.periode.utenlandsopphold.modalTitle": "Utenlandsopphold siste 12 måneder",
+    "step.fravaer.spm.harPerioderMedFravær": "Har du hatt hele dager med fravær fra jobb?",
+    "step.fravaer.harPerioderMedFravær.addLabel": "Legg til ny periode med fullt fravær",
+    "step.fravaer.harPerioderMedFravær.modalTitle": "Fravær hele dager",
+    "step.fravaer.harPerioderMedFravær.info.ikkeHelg.tittel": "Hvorfor kan jeg ikke velge lørdag eller søndag?",
+    "step.fravaer.harPerioderMedFravær.info.ikkeHelg.tekst": "Du kan kun få utbetalt omsorgspenger for hverdager, selv om du jobber lørdag eller søndag. Derfor kan du ikke velge lørdag eller søndag som start- eller sluttdato i perioden du legger inn.",
+    "step.fravaer.leggTilPeriodeMedFulltFravær": "Legg til ny periode med fullt fravær",
+    "step.fravaer.leggTilDagMedDelvisFravær": "Legg til ny dag med delvis fravær",
+    "step.fravaer.spm.harDagerMedDelvisFravær": "Har du hatt dager med delvis fravær fra jobb?",
+    "step.fravaer.spm.hjemmePgaStengtBhgSkole.2021": "Har du vært hjemme fra jobb fordi barnehage/skole/SFO har vært stengt på grunn av koronaviruset?",
+    "step.fravaer.harDagerMedDelvisFravær.addLabel": "Legg til ny dag med delvis fravær",
+    "step.fravaer.harDagerMedDelvisFravær.modalTitle": "Fravær deler av dag",
+    "step.fravaer.harDagerMedDelvisFravær.info.ikkeHelg.tittel": "Hvorfor kan jeg ikke velge lørdag eller søndag?",
+    "step.fravaer.harDagerMedDelvisFravær.info.ikkeHelg.tekst": "Du kan kun få utbetalt omsorgspenger for hverdager, selv om du jobber lørdag eller søndag. Derfor kan du ikke legge inn delvis fravær på lørdager eller søndager.",
+    "step.fravaer.måVelgeSituasjon": "Du må velge én av situasjonene over.",
+    "step.fravaer.utenlandsopphold.addLabel": "Legg til nytt utenlandsopphold",
+    "step.fravaer.utenlandsopphold.modalTitle": "Utenlandsopphold siste 12 måneder",
 
     "steg.arbeid.spm": "Hva er din arbeidssituasjon? Du kan velge flere.",
 
