--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -79,6 +79,10 @@
     "step.sendButtonLabel": "Send inn søknaden",
     "step.sendButtonAriaLabel": "Send inn søknaden",
 
+    "step.periode.pageTitle": "Første og siste dag du skal søke for",
+    "step.periode.stepTitle": "Første og siste dag du skal søke for",
+    "step.periode.stepIndicatorLabel": "Første og siste dag du skal søke for",
+
     "step.fravaer.pageTitle": "Perioder - Søknad om utbetaling av omsorgspenger",
     "step.fravaer.stepTitle": "Hvilke dager har du vært hjemme med barn?",
     "step.fravaer.stepIndicatorLabel": "Hvilke dager har du vært hjemme med barn?",
@@ -150,6 +154,10 @@
     "modal.minePlikter.part1b": "holder tilbake opplysninger",
     "modal.minePlikter.part2a": "Jeg har lest og forstått det som står på",
     "modal.minePlikter.part2b": "nav.no/rettogplikt",
+
+    "step.periode.veileder": "Informasjon om hvorfor vi spør om dette. Kanskje si noe om at en må søke flere ganger, dersom en skal søke for dager i ulike kalenderår.",
+    "step.periode.førsteDagMedFravær.spm": "Hva er første dag du skal søke for?",
+    "step.periode.sisteDagMedFravær.spm": "Hva er siste dag du skal søke for?",
 
     "step.fravaer.counsellorpanel.content": "I de fleste tilfeller må man som selvstendig næringsdrivende og frilanser betale de 10 første dager med omsorgspenger i året selv.",
     "step.fravaer.dager_med_fullt_fravært.label": "Dager med fullt fravær",
@@ -300,6 +308,12 @@
     "fieldvalidation.ingen_dokumenter": "Ingen vedlegg er lastet opp",
     "fieldvalidation.for_mange_dokumenter": "For mange dokumenter er lastet opp",
     "fieldvalidation.samlet_storrelse_for_hoy": "Total samlet størrelse for dokumentene du har lastet opp overstiger grensen på 24Mb.",
+
+    "fieldvalidation.førsteDagMedFravære_påkrevd": "Feltet \"Hva er første dag du skal søke for?\" er påkrevd",
+    "fieldvalidation.førsteDagMedFravære_ugyldigTidsperiode": "Datoen for når du har først dag med fravær må være innen siste år, og kan ikke være etter dagens dato.",
+    "fieldvalidation.sisteDagMedFravære_påkrevd": "Feltet \"Hva er siste dag du skal søke for?\" er påkrevd",
+    "fieldvalidation.sisteDagMedFravære_ugyldigTidsperiode": "Datoen for når du har siste dag med fravær må være lik, eller etter første dag, og kan ikke være etter dagens dato.",
+    "fieldvalidation.sisteDagMedFravære_ikkeSammeÅrSomFørsteDag": "En søknad kan kun inneholde dager med fravær som er i samme kalenderår. Dersom du skal søke for dager som er i ulike kalenderår, må du sende én søknad for hvert kalenderår.",
 
     "avbrytSøknadDialog.avbrytSøknadLabel": "Ja, avbryt søknad",
     "avbrytSøknadDialog.fortsettSøknadLabel": "Nei",
